Last fix caused the gallery artwork to overlap the controls.  Made the controls fixed and added a spacer to keep the FramedArtwork constrained to the correct height.

--- a/src/app/gallery/gallery_styles.css
+++ b/src/app/gallery/gallery_styles.css
@@ -85,12 +85,16 @@
     /*align-self: left;*/
 }
 
+.gallery--framedArtwork--spacer{
+    height: 60px;
+}
+
 .gallery--framedArtwork {
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
-    bottom: 70px;
+    bottom: 0;
 
     display: flex;
     align-items: center;
